Kubernetes/prefect-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: prefect-server
  namespace: data-ingestion
spec:
  type: ClusterIP
  ports:
    - port: 4200
      targetPort: 4200
  selector:
    app: prefect-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prefect-server
  namespace: data-ingestion
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prefect-server
  template:
    metadata:
      labels:
        app: prefect-server
    spec:
      containers:
        - name: prefect-server
          image: prefecthq/prefect:3.4.11-python3.11
          args: ["prefect", "server", "start"]
          ports:
            - containerPort: 4200
