Kubernetes/prefect-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prefect-server-ingress
  namespace: prefect-test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: prefect.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prefect-server
                port:
                  number: 4200
